--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@theme {
+  --color-primary: #d17728;
+  --color-primary-hover: #b5641f;
+  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,16 +17,10 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font-sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-@theme {
-  --color-primary:#d17728;
-  --color-primary-hover:#b5641f;
+  overflow-x: hidden;
 }
 
 
@@ -30,10 +30,9 @@ body {
   .rotate-animation {
     animation: rotate 6s linear infinite;
   }
-  .first-letter-cap {
-    &::first-letter {
-      text-transform: uppercase;
-    }
+
+  .first-letter-cap::first-letter {
+    text-transform: uppercase;
   }
 }
 
